--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,10 @@
 {
-    "/js/app.js": "/js/app.js?id=a2fdbcd69ef598374f62",
+    "/js/app.js": "/js/app.js?id=db2db0fab55d4d975db5",
     "/css/app.css": "/css/app.css?id=f6eaf7355a11a2a7e27b",
     "/images/audit1.jpg": "/images/audit1.jpg?id=0fa00f062389583c7b9f",
     "/images/aupt1.jpg": "/images/aupt1.jpg?id=4923d7b3b241387084ea",
+    "/images/aupt10.jpg": "/images/aupt10.jpg?id=b48f7b0aa72b125623dd",
+    "/images/aupt11.jpg": "/images/aupt11.jpg?id=bc5f27a70e113c2bc5c1",
     "/images/aupt2.png": "/images/aupt2.png?id=b08a3693e6ac4bc1c4d5",
     "/images/aupt3.jpg": "/images/aupt3.jpg?id=b04973f8ca335e104a07",
     "/images/aupt4.jpg": "/images/aupt4.jpg?id=2b4420a7dc63902ac497",
@@ -10,14 +12,24 @@
     "/images/aupt6.jpg": "/images/aupt6.jpg?id=3fea363ad3c85133b8aa",
     "/images/aupt7.jpg": "/images/aupt7.jpg?id=5ccd82f0dcd7f9244ed9",
     "/images/aupt8.png": "/images/aupt8.png?id=12b4c03b883d56e1f00e",
+    "/images/aupt9.jpg": "/images/aupt9.jpg?id=89ebe76269cb051c24b2",
     "/images/conditioner1.jpg": "/images/conditioner1.jpg?id=aed63237c201dd88f9cf",
+    "/images/elektrowork1.jpg": "/images/elektrowork1.jpg?id=2f18b7f249e612acb79f",
+    "/images/elektrowork2.jpg": "/images/elektrowork2.jpg?id=24823892388fc0c3be1f",
+    "/images/elektrowork3.jpg": "/images/elektrowork3.jpg?id=7826015c7788847f395e",
+    "/images/elektrowork4.jpg": "/images/elektrowork4.jpg?id=85568968332aabe7eeb8",
+    "/images/elektrowork5.jpg": "/images/elektrowork5.jpg?id=60fbc89f2fbec1c84808",
+    "/images/elektrowork6.jpg": "/images/elektrowork6.jpg?id=867ae34bfcc7870f08aa",
     "/images/license0.jpg": "/images/license0.jpg?id=8d96a2c7e05dde3659f8",
     "/images/license1.jpg": "/images/license1.jpg?id=7ebd572682471f939737",
     "/images/logo-icon.png": "/images/logo-icon.png?id=3398cf52fb74f471d083",
     "/images/logo.png": "/images/logo.png?id=04f091206bf657222a53",
     "/images/logo2.png": "/images/logo2.png?id=edf17d4ab3611193fa31",
+    "/images/og_main.png": "/images/og_main.png?id=04f091206bf657222a53",
     "/images/serv_pic1.jpg": "/images/serv_pic1.jpg?id=a103ac566e31a84d62ce",
     "/images/serv_pic10.jpg": "/images/serv_pic10.jpg?id=8a1ef6822a79d13a7ada",
+    "/images/serv_pic11.jpg": "/images/serv_pic11.jpg?id=bd9d6642e9a5ec62d10c",
+    "/images/serv_pic12.jpg": "/images/serv_pic12.jpg?id=94b1c99267c4dfbdf1c7",
     "/images/serv_pic2.jpg": "/images/serv_pic2.jpg?id=e5d4dba1976abfae4564",
     "/images/serv_pic5.jpg": "/images/serv_pic5.jpg?id=85bab12d21645e0fafda",
     "/images/serv_pic6.jpg": "/images/serv_pic6.jpg?id=97fe5797c4fbe05f2b39",
@@ -25,6 +37,8 @@
     "/images/serv_pic8.jpg": "/images/serv_pic8.jpg?id=05ecbb8af4bb57e17221",
     "/images/serv_pic9.jpeg": "/images/serv_pic9.jpeg?id=56c7a9b38dfa5da9532b",
     "/images/skud1.jpg": "/images/skud1.jpg?id=7a3f99f673ccf5c08504",
+    "/images/skud2.jpg": "/images/skud2.jpg?id=ea7e1e0365146e6fb150",
+    "/images/skud3.jpg": "/images/skud3.jpg?id=e1595f76aa1f1d04b911",
     "/images/slide1_bg.jpg": "/images/slide1_bg.jpg?id=fcbce978c6ff72279322",
     "/images/slide2_bg.jpg": "/images/slide2_bg.jpg?id=4874428b886387957bb3",
     "/images/slide3_bg.jpg": "/images/slide3_bg.jpg?id=69fc19c0b8e6f9d8402c",
@@ -44,5 +58,6 @@
     "/images/partners/fgbu.jpg": "/images/partners/fgbu.jpg?id=72d85fada022c4b0e944",
     "/images/partners/magnit.jpg": "/images/partners/magnit.jpg?id=52ea9015254d92656233",
     "/images/partners/okb.png": "/images/partners/okb.png?id=f9ba10e716dcb1527af6",
-    "/images/partners/rjd.jpg": "/images/partners/rjd.jpg?id=e0896887f242ca46356d"
+    "/images/partners/rjd.jpg": "/images/partners/rjd.jpg?id=e0896887f242ca46356d",
+    "/sitemap.xml": "/sitemap.xml?id=e82c83e4a15c0b174706"
 }
